--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "output":"node user/index.js"
+    "output": "node user/index.js"
   },
   "author": "Mark 'kaosat-dev' Moissette",
   "license": "MIT",
@@ -14,6 +14,7 @@
     "@jscad/io-utils": "^0.1.2",
     "@jscad/stl-serializer": "^0.1.1",
     "blob-to-buffer": "^1.2.7",
+    "decache": "^4.4.0",
     "just-diff": "^2.1.1",
     "serialize-to-js": "^1.1.1",
     "simple-diff": "^1.6.0"
