chore(pkg): added dependency

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "blob-to-buffer": "^1.2.7",
     "decache": "^4.4.0",
     "just-diff": "^2.1.1",
+    "object-hash": "^1.2.0",
     "serialize-to-js": "^1.1.1",
     "simple-diff": "^1.6.0"
   }
