--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "@jscad/csg": "^0.7.0",
-    "@jscad/io-utils": "^0.1.3",
-    "@jscad/stl-serializer": "^0.1.3",
+    "@jscad/io-utils": "1.0.0-alpha.fb542811",
+    "@jscad/stl-serializer": "1.0.0-alpha.fb542811",
     "blob-to-buffer": "^1.2.7",
     "decache": "^4.4.0",
     "just-diff": "^2.1.1",
